2004-07-14  Andreas Tobler  <a.tobler@schweiz.ch>

	* testsuite/libjava.jacks/jacks.exp (gcj_jacks_write): Add deprecation
	flag to the gcj_setup.
	(gcj_jacks_run): Check tclsh version and launch jacks directly with
	the tclsh.
	* testsuite/libjava.jacks/jacks.xfail: Update fails to reflect the
	deprecation flag change. 58 XFAILS removed.

2004-07-14  Ulrich Weigand  <uweigand@de.ibm.com>

	* configure.host (DIVIDESPEC) [s390*-*-*]: Set to 
	-fno-use-divide-subroutine.
	* include/s390-signal.h: Include <ucontext.h> and <limits.h>.
	(HANDLE_FPE): Define.
	(SIGNAL_HANDLER): Change third argument to ucontext_t *.
	(struct old_s390_kernel_sigaction): Likewise for k_sa_handler.
	(HANDLE_DIVIDE_OVERFLOW): Define.

2004-07-14  Michael Koch  <konqueror@gmx.de> 
	    Matthias Klose  <doko@debian.org> 

	* java/awt/im/InputContext.java: Initialze in, line.

2004-07-13  Ulrich Weigand  <uweigand@de.ibm.com>

	* interpret.cc (run): Correctly access libffi return values of
	integral smaller-than-int type; these are implicitly promoted.

2004-07-13  Bryce McKinlay  <mckinlay@redhat.com>

	PR libgcj/7587
	* interpret.cc (compile_mutex): New.
	(_Jv_InitInterpreter): New. Initialize compile_mutex.
	(run): Lock compile_mutex before calling compile() if compilation is
	required.
	* prims.cc (_Jv_CreateJavaVM): Call _Jv_InitInterpreter().
	* include/java-interp.h (_Jv_InitInterpreter): Declare.	

2004-07-12  Bryce McKinlay  <mckinlay@redhat.com>

	PR libgcj/15713
	* include/jvm.h (_Jv_value): New union type.
	* gcj/field.h (_Jv_Field): Add new _addr union field variants 
	* interperet.cc (run): Use _Jv_value union type and *_addr _Jv_Field 
	union members.

2004-07-12  Scott Gilbertson  <scottg@mantatest.com>

	* gnu/awt/xlib/XCanvasPeer.java (createImage): Implement.
	* gnu/awt/xlib/XOffScreenImage.java
	  (XOffScreenImage): Add ImageConsumer interface. Add ColorModel
	  constructor argument. Add constructor using ImageProducer.
	  (getSource): Implement.